@@ -410,9 +410,50 @@ public class MultiActionController extends AbstractController implements LastMod
 	 */
 	protected void bind(ServletRequest request, Object command) throws ServletException {
 		logger.debug("Binding request parameters onto MultiActionController command");
-		ServletRequestDataBinder binder = new ServletRequestDataBinder(command, "command");
+		ServletRequestDataBinder binder = createBinder(request, command);
 		binder.bind(request);
 		binder.closeNoCatch();
+	}
+	
+	/**
+	 * Create a new binder instance for the given command and request.
+	 * Called by bind. Can be overridden to plug in custom
+	 * ServletRequestDataBinder subclasses.
+	 * <p>Default implementation creates a standard ServletRequestDataBinder,
+	 * sets the specified MessageCodesResolver (if any), and invokes initBinder.
+	 * Note that initBinder will not be invoked if you override this method!
+	 * @param request current HTTP request
+	 * @param command the command to bind onto
+	 * @return the new binder instance
+	 * @throws Exception in case of invalid state or arguments
+	 * @see #bindAndValidate
+	 * @see #initBinder
+	 * @see #setMessageCodesResolver
+	 */
+	protected ServletRequestDataBinder createBinder(ServletRequest request, Object command)
+	    throws ServletException {
+		ServletRequestDataBinder binder = new ServletRequestDataBinder(command, "command");
+		initBinder(request, binder);
+		return binder;
+	}
+
+	/**
+	 * Initialize the given binder instance, for example with custom editors.
+	 * Called by createBinder.
+	 * <p>This method allows you to register custom editors for certain fields of your
+	 * command class. For instance, you will be able to transform Date objects into a
+	 * String pattern and back, in order to allow your JavaBeans to have Date properties
+	 * and still be able to set and display them in an HTML interface.
+	 * <p>Default implementation is empty.
+	 * @param request current HTTP request
+	 * @param binder new binder instance
+	 * @throws Exception in case of invalid state or arguments
+	 * @see #createBinder
+	 * @see org.springframework.validation.DataBinder#registerCustomEditor
+	 * @see org.springframework.beans.propertyeditors.CustomDateEditor
+	 */
+	protected void initBinder(ServletRequest request, ServletRequestDataBinder binder)
+	    throws ServletException {
 	}
 	
 	/**
